--- a/followme/static/map.html
+++ b/followme/static/map.html
@@ -20,6 +20,7 @@
 
       function handle_new_position () {
         data = JSON.parse(this.responseText);
+	console.log(data);
         v = data.vehicle
         t = data.target
         quad.rotation = v.bearing;
