--- a/followme/static/map.html
+++ b/followme/static/map.html
@@ -12,67 +12,7 @@
   <body>
     <h3>FollowMe<h3>
     <div id="map"></div>
-    <script>
-      var target;
-      var vehicle;
-      var map;
-      var quad;
-
-      function handle_new_position () {
-        data = JSON.parse(this.responseText);
-	console.log(data);
-        v = data.vehicle
-        t = data.target
-        quad.rotation = v.bearing;
-        vehicle.setIcon(quad);
-        vehicle.setPosition({lat: v.lat, lng: v.lng});
-        target.setPosition({lat: t.lat, lng: t.lng});
-        map.setCenter({lat: t.lat, lng: t.lng})
-      }
-
-      function update_position() {
-        var req = new XMLHttpRequest();
-
-        req.addEventListener('load', handle_new_position);
-        req.open('GET', '/position');
-        req.send();
-      }
-
-      function start_tracking() {
-        setInterval(update_position, 100);
-      }
-
-      function initMap() {
-        var pos;
-
-        quad = {
-            path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW,
-            scale: 10,
-        };
-
-        map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 20,
-        });
-
-        target = new google.maps.Marker({map: map, label: 'T'});
-        vehicle = new google.maps.Marker({
-          map: map,
-          label: 'V',
-          icon: quad
-        });
-
-        navigator.geolocation.getCurrentPosition(function(position) {
-          pos = {
-            lat: position.coords.latitude,
-            lng: position.coords.longitude
-          };
-
-          map.setCenter(pos);
-          start_tracking();
-        });
-
-      }
-    </script>
+    <script src="/static/followme.js" type="text/javascript"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbzBsbnApy8arPHuBBrmk17R6geR_Hh5g&callback=initMap">
     </script>
